$Id$

2015-03-22  Christian Franke  <franke@computer.org>

	os_linux.cpp, smartctl.8.in, smartd.8.in, smartd.conf, smartd.conf.5.in,
	smartd.cpp: Remove old Linux IDE device names (/dev/hdX) in man pages
	and help texts.

2015-03-21  Christian Franke  <franke@computer.org>

	smartd.8.in, smartd.cpp: Clarify smartd '--capabilities' option
	(ticket #523).

2015-03-20  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Crucial/Micron MX100/MX200/M5x0/M600 Client SSDs: Rename, add MX200
	- Sandforce Driven SSDs: ATP Velocity MIV, Mushkin Chronos Enhanced
	- Indilinx Barefoot 3 based SSDs: OCZ VERTEX 460, OCZ AMD Radeon R7
	- Intel 530 Series SSDs: mSATA variant
	- JMicron based SSDs: ADATA SP310
	- Plextor M3/M5/M6 Series SSDs: Rename, add M6M, M6S

2015-03-13  Douglas Gilbert  <dgilbert@interlog.com>

	scsiata.cpp
	- SCSI to ATA translation: from SAT-2 and later a SAT layer may
	  return ATA registers via fixed format sense data. Change to
	  additionally accept (partial) fixed format sense. In response
	  to ticket #296 and FreeBSD Bug 191717.

2015-03-10  Douglas Gilbert  <dgilbert@interlog.com>

	scsicmds.cpp, scsiprint.cpp
	- SCSI: when READ DEFECT yields sense of "... defect list not found"
	  bypass the corresponding report quietly. (ticket #343)

2015-02-08  Christian Franke  <franke@computer.org>

	drivedb.h:
	- USB: Buffalo Drivestation Duo (0x0411:0x01ce)
	- USB: Toshiba Canvio Basics (0x0480:0x0201, 0xa00d)
	- USB: Toshiba Stor.E Basics (0x0480:0xa00c)
	- USB: Toshiba Canvio ALU (0x0480:0xa100)
	- USB: Toshiba Canvio Desktop (0x0480:0xd000)
	- USB: Samsung S2 Portable (0x04e8:0x1f0a)
	- USB: Samsung S3 Portable (0x04e8:0x61c8)
	- USB: LaCie Rugged Triple Interface (0x059f:0x100c)
	- USB: Initio (0x13fd:0x3910)
	- USB: ASMedia (0x174c:0x5516)
	- USB: Innostor IS611 (0x1f75:0x0611)

2015-02-02  Christian Franke  <franke@computer.org>

	drivedb.h:
	- USB: Seagate FreeAgent XTreme (0x0bc2:0x3101)
	- USB: Seagate Expansion Portable (0x0bc2:0x232[01])